# mtase-pipeline

./: Pipfile  class_withStructure.csv  class_withStructure.tsv  etsv.py  etsvargs.py  requirements.txt  setup.cfg  streamlit_app.py
.devcontainer/: devcontainer.json
TempDir/: class.tsv  rebenz.txt
etsv_ms/: __init__.py
etsv_ms/etsv/: args.py
pages/: 1_MTase_detection_and_classification.py  2_MTase_visualisation.py  streamlit_app.py
pipelineFiles/: All_profile_region.csv  class.tsv  class_withStructure.tsv  classification.py  file.stk  get_aln_regions.py  region_alignments.tsv  selected_profiles.hmm  several_cat_domains.tsv
src/etsv/: __init__.py  main.py
src/etsv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_input.tsv  test_input_general.tsv  test_main.py  test_output.tsv
