[metadata]
name = etsv
version = attr: etsv.__version__
author = isrusin
author_email = 10874317+isrusin@users.noreply.github.com
description = ETSV format wrappers
#long_description = file: README.md
#long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
